--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
     <body>
 	<h1>Hello World</h1>
+	<img src = "https://cdn.iconscout.com/icon/free/png-256/free-like-2130778-1794820.png">
     </body>
 </html>
